--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "expo": "~38.0.8",
-    "expo-image-picker": "^8.4.0",
-    "expo-permissions": "^9.1.0",
+    "expo-image-picker": "~8.3.0",
+    "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
     "react": "~16.11.0",
