--- a/package.json
+++ b/package.json
@@ -7,30 +7,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~38.0.8",
-    "expo-splash-screen": "^0.5.0",
-    "expo-status-bar": "^1.0.2",
-    "expo-updates": "~0.2.10",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "~0.62.2",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-screens": "~2.9.0",
-    "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "expo": "~38.0.8",
     "expo-image-picker": "~8.3.0",
     "expo-permissions": "~9.0.1",
+    "expo-splash-screen": "^0.5.0",
+    "expo-status-bar": "^1.0.2",
+    "expo-updates": "~0.2.10",
     "moment": "^2.27.0",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-native": "~0.62.2",
     "react-native-dropdown-picker": "^3.1.11",
-    "react-native-image-picker": "^2.3.3",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-image-picker": "^2.3.4",
+    "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-table-component": "^1.2.1",
+    "react-native-unimodules": "~0.10.1",
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
