--- a/ios/goldenlandscaping/Info.plist
+++ b/ios/goldenlandscaping/Info.plist
@@ -17,9 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+<string>This app requires access to the photo library so users can upload photos.</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
